fixing background let's hope it isn't blurry

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -10,6 +10,7 @@ header {
 
 body {
     background-image: url(https://img.freepik.com/premium-vector/vector-notebook-paper_1303870-18.jpg);
+    background-size: 100% 100%;
 }
 
 h1 {
